Remove the overlay for the YouTube player. Fixes #5463 - The overlay was overlapping all buttons rendering them non-functional.

--- a/src/plugins/multimedia/_base.scss
+++ b/src/plugins/multimedia/_base.scss
@@ -162,6 +162,10 @@ $mm-ctrl-bg-color: #000;
 			border-bottom: 10px solid #fff;
 			margin-top: -35px;
 		}
+
+		.wb-mm-ovrly {
+			@extend %multimedia-display-none;
+		}
 	}
 
 	/*
